--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,40 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
+table, th, td {
+  border: 1px solid #ccc;
+  border-collapse: collapse;
+}
+th {
+  border: 1px solid #ccc;
+  padding: 8px;
+  text-align: left;
+}
+td {
+  border: 1px solid #ccc;
+  padding: 8px;
+}
+/*
+        th: {
+            border: '1px solid #ccc',
+            padding: '8px',
+            textAlign: 'left' as const,
+        },
+        thCenter: {
+            border: '1px solid #ccc',
+            padding: '8px',
+            textAlign: 'center' as const,
+        },
+        td: {
+            border: '1px solid #ccc',
+            padding: '8px',
+        },
+        tdCenter: {
+            border: '1px solid #ccc',
+            padding: '8px',
+            textAlign: 'center' as const,
+        },
+*/
 .lead-highest {
   background-color: #ffd70033; /* Gold with transparency */
   font-weight: bold;
