--- a/src/index.css
+++ b/src/index.css
@@ -25,27 +25,10 @@ td {
   border: 1px solid #ccc;
   padding: 8px;
 }
-/*
-        th: {
-            border: '1px solid #ccc',
-            padding: '8px',
-            textAlign: 'left' as const,
-        },
-        thCenter: {
-            border: '1px solid #ccc',
-            padding: '8px',
-            textAlign: 'center' as const,
-        },
-        td: {
-            border: '1px solid #ccc',
-            padding: '8px',
-        },
-        tdCenter: {
-            border: '1px solid #ccc',
-            padding: '8px',
-            textAlign: 'center' as const,
-        },
-*/
+.sortable {
+  cursor: pointer;
+  text-decoration: underline;
+}
 .lead-highest {
   background-color: #ffd70033; /* Gold with transparency */
   font-weight: bold;
