--- a/src/index.css
+++ b/src/index.css
@@ -33,11 +33,11 @@ td {
   background-color: #ffd70033; /* Gold with transparency */
   font-weight: bold;
 }
-.lead-secondhighest {
+.lead-second-highest {
   background-color: #c0c0c033; /* Silver with transparency */
   font-weight: bold;
 }
-.lead-thirdhighest {
+.lead-third-highest {
   background-color: #cd7f3233; /* Bronze with transparency */
   font-weight: bold;
 }
