--- a/src/index.css
+++ b/src/index.css
@@ -119,3 +119,20 @@ td {
     width: 100%;
   }
 }
+
+.tet-details {
+  display: flex;
+  flex-wrap: wrap;
+  border-radius: 4px;
+}
+.tet-details h3 {
+  margin-top: 0;
+}
+.tet-details div {
+  padding: 10px;
+}
+.tet-details img {
+  max-width: 30vw;
+  max-height: 300px;
+  border-radius: 5px;
+}
