--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,20 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 20px;
 }
-h2 {
+h2, h3 {
   font-size: 24px;
+}
+
+
+@media screen and (min-width: 1000px) {
+  body {font-size: 25px;}
+  h2, h3 {font-size: 30px;}
+}
+
+
+h2 {
   margin-bottom: 0.5em;
 }
 
@@ -96,11 +107,11 @@ td {
   display: flex;
   gap: 15px;
   flex-wrap: wrap;
-  font-size: 16px;
+  font-size: 80%;
 }
 .achievements-list:empty::before {
   content: "🚫";
-  font-size: 40px;
+  font-size: 200%;
 }
 .achievements-list > div {
   width: calc(50% - 12px);
@@ -112,7 +123,6 @@ td {
 .achievements-list h3 {
   margin-top: 0;
   margin-bottom: 10px;
-  font-size: 24px;
 }
 .achievements-list p {
   margin: 0;
