--- a/src/index.css
+++ b/src/index.css
@@ -111,7 +111,7 @@ td {
 }
 .achievements-list:empty::before {
   content: "🚫";
-  font-size: 200%;
+  font-size: 150%;
 }
 .achievements-list > div {
   width: calc(50% - 12px);
@@ -168,4 +168,8 @@ td {
   max-width: 30vw;
   max-height: 300px;
   border-radius: 5px;
+}
+.wide-data {
+  overflow: auto;
+  max-width: 100vw;
 }
